--- a/homepage/static/homepage/scss/components/_sidebar.scss
+++ b/homepage/static/homepage/scss/components/_sidebar.scss
@@ -44,8 +44,13 @@
         & > li {
           & > a{
             display: block;
+            border: 1px solid _palette('bg-alt');
             padding: _size('padding-btn');
             text-decoration: none;
+
+            &.active {
+              border: 1px solid darken(_palette('link-hover'), 10%);
+            }
 
             & * {
               display: inline;
